syntax = "proto3";

package user.v1;

import "user/v1/user.proto";

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserResponse {
  User user = 1;
}
